Makefile.inc: error if UPDATE_IMAGE is enabled with no coreboot.rom
Instead of just failing with the statement:
'mv: cannot stat ‘coreboot.rom’: No such file or directory',
fail with an error that helps the user understand the issue.

Change-Id: Ie693d45710f599991514e0803a7c444636e473c9
Signed-off-by: Martin Roth <martinroth@google.com>
Reviewed-on: https://review.coreboot.org/13065
Tested-by: build bot (Jenkins)
Reviewed-by: Nico Huber <nico.h@gmx.de>

--- a/Makefile.inc
+++ b/Makefile.inc
@@ -782,7 +782,10 @@ prebuild-files = \
 
 .PHONY: $(obj)/coreboot.pre
 $(obj)/coreboot.pre: $$(prebuilt-files) $(CBFSTOOL)
-	mv $(obj)/coreboot.rom $@.tmp
+	mv $(obj)/coreboot.rom $@.tmp || \
+	(echo "Error: You have UPDATE_IMAGE set in Kconfig, but have no existing image to update." && \
+	echo Exiting." && \
+	false)
 	$(prebuild-files) true
 	mv $@.tmp $@
 endif # ifneq ($(CONFIG_UPDATE_IMAGE),y)
