--- a/src/mainboard/siemens/mc_tcu3/Kconfig
+++ b/src/mainboard/siemens/mc_tcu3/Kconfig
@@ -28,6 +28,7 @@ config BOARD_SPECIFIC_OPTIONS # dummy
 	select DRIVER_INTEL_I210
 	select SOC_INTEL_FSP_BAYTRAIL_MD
 	select USE_BLOBS
+	select CBFS_AUTOGEN_ATTRIBUTES
 
 config MAINBOARD_DIR
 	string
