--- a/src/mainboard/purism/librem13/Kconfig
+++ b/src/mainboard/purism/librem13/Kconfig
@@ -3,7 +3,7 @@ if BOARD_PURISM_LIBREM13
 config BOARD_SPECIFIC_OPTIONS # dummy
 	def_bool y
 	select BOARD_ROMSIZE_KB_8192
-	select EC_PURISM_LIBEM
+	select EC_PURISM_LIBREM
 	select HAVE_ACPI_RESUME
 	select HAVE_ACPI_TABLES
 	select INTEL_INT15
