Makefile: Don't copy thin archives around
We can't just copy archives around as they may be thin archives which
contain relative paths. Using ar to create another thin archive should
result in the same archive with fixed paths.

Tested by verifying that the resulting coreboot.rom files didn't change
for all of Jenkins' abuild configurations.

Change-Id: Ic5743da2f4b5eb246fafd02181d66c5d40e7f00c
Signed-off-by: Nico Huber <nico.h@gmx.de>
Reviewed-on: https://review.coreboot.org/13179
Tested-by: build bot (Jenkins)
Reviewed-by: Patrick Georgi <pgeorgi@google.com>

--- a/Makefile.inc
+++ b/Makefile.inc
@@ -179,8 +179,8 @@ endef
 define generic-objs_a_template_gen
 de$(EMPTY)fine $(1)-objs_a_template
 $$(call src-to-obj,$1,$$(1).a): $$(1).a
-	@printf "    CP         $$$$(subst $$$$(obj)/,,$$$$(@))\n"
-	cp $$$$< $$$$@.tmp
+	@printf "    AR         $$$$(subst $$$$(obj)/,,$$$$(@))\n"
+	$$$$(AR_$(1)) rcsT $$$$@.tmp $$$$<
 	mv $$$$@.tmp $$$$@
 en$(EMPTY)def
 endef
